# star-burger

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile-frontend  README.md  deploy_script.sh  deploy_starburger.sh  deploy_start_burger.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  package-lock.json  production.yml  pyproject.toml  requirements.txt
foodcartapp/: admin.py  models.py  serializers.py  utils.py  views.py
foodcartapp/migrations/: 0038_order_orderposition.py  0039_auto_20211104_0802.py  0040_orderposition_price.py  0041_fill_prices.py  0042_auto_20211108_1353.py  0043_auto_20211108_1426.py  0044_order_payment_method.py  0045_auto_20211123_1030.py  0046_auto_20211123_1055.py  0047_alter_order_address.py
geoposition/: admin.py  apps.py  handle_coordinates.py  models.py
geoposition/migrations/: 0001_initial.py  0002_auto_20211123_1609.py  0003_auto_20211123_1631.py
nginx/: default.conf
restaurateur/: utils.py  views.py
restaurateur/templates/: order_items.html
star_burger/: settings.py  urls.py
