[tool.poetry]
name = "star-burger"
version = "0.1.0"
description = ""
authors = ["balancy <balancy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
django-debug-toolbar = "3.2.1"
Pillow = "8.2.0"
environs = {version = "9.3.2", extras = ["django"]}
django-phonenumber-field = {extras = ["phonenumbers"], version = "^5.2.0"}
djangorestframework = "^3.12.4"
requests = "^2.26.0"
geopy = "^2.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
